--- a/mapping/styles.less
+++ b/mapping/styles.less
@@ -495,8 +495,12 @@ header {
                                         margin-left:15%;
                                         }
                                     input[type="button"]{ 
-                                        border-radius:15px;
-                                        margin-top:20px;
+                                       border-radius:15px;
+                                        width:70px;
+                                        height:32px;    
+                                        margin-top:5px;
+                                        float:right;
+                                        margin-right:10px;
                                         }
                                 }    
                                 .graphContainer{
@@ -562,6 +566,9 @@ header {
                                 margin-top:5px;
                                 margin-bottom:5px;
                                 input[type="button"]{
+                                      border-radius:15px;
+                                        width:70px;
+           
                                     float:right;
                                     border-radius:15px;
                                     }
