--- a/mapping/styles.css
+++ b/mapping/styles.css
@@ -9,7 +9,11 @@ body{word-wrap:break-word;}
 #slide-1{background:#646e96;}
 #slide-2{background:#96a0c8;}
 #slide-3{background:#c8d2fa;}
-#overlay{position:absolute;top:0px;left:0px;width:100%;height:100%;background-color:white;z-index:9000;background:#646e96;}#overlay #formVerifyContainer{width:200px;margin:0 auto;}#overlay #formVerifyContainer .normal{position:relative;width:100px;height:20px;font-size:12px;line-height:12px;}
+#overlay{position:absolute;top:0px;left:0px;width:100%;height:100%;background-color:white;z-index:9999;background:#646e96;}#overlay #formVerifyContainer{width:400px;margin:0 auto;overflow-y:auto;height:100%;}#overlay #formVerifyContainer p{text-align:justify;}
+#overlay #formVerifyContainer a{color:white;}
+#overlay #formVerifyContainer #formVerify{width:300px;margin:5px auto;border-radius:10px;padding:10px 0;background-color:rgba(255, 255, 255, 0.2);}#overlay #formVerifyContainer #formVerify .formRow{clear:both;width:100%;}#overlay #formVerifyContainer #formVerify .formRow input[type="text"]{float:right;}
+#overlay #formVerifyContainer #formVerify .formRow label{float:left;margin-top:5px;}
+#overlay #formVerifyContainer .normal{display:block;margin:0 auto;position:relative;width:100px;height:20px;font-size:12px;line-height:12px;}
 .slideshow{position:fixed;left:-100%;display:block;width:300%;height:100%;padding:0;margin:0;}.slideshow .slide{position:absolute;top:0;left:0;z-index:2;display:block;width:33.333333%;height:100%;-webkit-transform:translateX(0);-moz-transform:translateX(0);transform:translateX(0);-webkit-transition:-webkit-transform 600ms ease-out 0;-moz-transition:-moz-transform 600ms ease-out 0;transition:transform 600ms ease-out 0;}
 .slideshow .slide.active{-webkit-transform:translateX(100%);-moz-transform:translateX(100%);transform:translateX(100%);}
 .slideshow .slide.active~.slide{-webkit-transform:translateX(200%);-moz-transform:translateX(200%);transform:translateX(200%);}
@@ -17,8 +21,8 @@ body{word-wrap:break-word;}
 .slideshow .slide.static-background.active{-webkit-transition-delay:0;-moz-transition-delay:0;transition-delay:0;}.slideshow .slide.static-background.active .content{-webkit-transform:translateX(0);-moz-transform:translateX(0);transform:translateX(0);}
 .slideshow .slide.active~.slide.static-background .content{-webkit-transform:translateX(100%);-moz-transform:translateX(100%);transform:translateX(100%);}
 html,body{padding:0;margin:0;font:normal 14px/16px "Helvetica Neue",Helvetica,Arial,sans-serif;color:#ffffff;}
-button#prev-button{bottom:20px;left:20px;position:fixed;display:block;width:50px;height:50px;border-radius:50px;font-size:20px;font-weight:bold;text-align:center;}
-button#next-button{right:20px;bottom:20px;position:fixed;display:block;width:50px;height:50px;border-radius:50px;font-size:20px;font-weight:bold;text-align:center;}
+button#prev-button{bottom:20px;left:20px;position:fixed;display:block;width:50px;height:50px;border-radius:50px;-o-border-radius:50px;font-size:20px;font-weight:bold;text-align:center;z-index:9000;}
+button#next-button{right:20px;bottom:20px;position:fixed;display:block;width:50px;height:50px;border-radius:50px;-o-border-radius:50px;z-index:9000;font-size:20px;font-weight:bold;text-align:center;}
 *{-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box;}
 header{position:absolute;top:60px;display:block;}header .header_wrapper{width:470px;}
 header h1{float:left;color:#ffffff;width:390px;height:65px;background-color:#f4692b;font-size:36px;line-height:36px;margin:0;padding:32px 30px 68px 70px;}
@@ -28,7 +32,8 @@ header .tri_bottom{float:left;width:0px;height:0px;border-style:solid;border-wid
 .content h1{font-size:36px;line-height:36px;margin-left:25%;margin-bottom:10px;}.content h1 span{clear:left;}
 .content h2{font-size:18px;line-height:24px;margin-bottom:10px;}.content h2 span{clear:left;}
 .content p{font-size:14px;line-height:16px;}
-.content .wrapper{height:90%;float:left;padding:20px;background:rgba(0, 0, 0, 0.1);width:100%;border-radius:30px;}.content .wrapper #audioSelection{padding:1%;border-radius:15px;background:rgba(0, 0, 0, 0.1);margin:0 auto 20px auto;width:90%;height:90px;}.content .wrapper #audioSelection input[type="button"]{border-radius:15px;width:65px;height:65px;font-weight:bold;}
+.content .wrapper{height:90%;float:left;padding:20px;background:rgba(0, 0, 0, 0.1);width:100%;border-radius:30px;min-width:810px;overflow-x:auto;}.content .wrapper .backEmphasis{background:rgba(255, 255, 255, 0.1);border-radius:10px;}
+.content .wrapper #audioSelection{float:left;padding:1%;border-radius:15px;background:rgba(0, 0, 0, 0.1);margin:0 auto 20px 5%;width:90%;}.content .wrapper #audioSelection input[type="button"]{border-radius:15px;width:65px;height:65px;font-weight:bold;}
 .content .wrapper #audioSelection #audioList{line-height:65px;float:left;}
 .content .wrapper #audioSelection #removeFromListButton{margin-left:15px;float:right;display:none;}.content .wrapper #audioSelection #removeFromListButton input[type="button"]{font-size:50px;line-height:50px;padding-bottom:8px;background-color:#ffffff;border-color:#ebebeb;}
 .content .wrapper #audioSelection #removeFromListButton input[type="button"]:hover{background-color:#fafafa;border-color:#d7d7d7;}
@@ -40,8 +45,8 @@ header .tri_bottom{float:left;width:0px;height:0px;border-style:solid;border-wid
 .content .wrapper #audioSelection #pauseButton input[type="button"]:hover{border-color:#d25f5f;background-color:#eb7373;}
 .content .wrapper #audioSelection #addToListButton{margin-left:15px;float:right;display:none;}.content .wrapper #audioSelection #addToListButton input[type="button"]{font-size:50px;background-color:#ffffff;border-color:#ebebeb;}
 .content .wrapper #audioSelection #addToListButton input[type="button"]:hover{background-color:#fafafa;border-color:#d7d7d7;}
-.content .wrapper #audioSelection #soundDescriptionPreview{float:left;height:100%;overflow-y:scroll;width:300px;margin-right:10px;}
-.content .wrapper #audioZone{margin:0 auto;background:rgba(0, 0, 0, 0.1);width:90%;height:76%;border-radius:15px;overflow-y:scroll;}.content .wrapper #audioZone #audioZoneList{width:100%;list-style:none;padding-left:1%;}.content .wrapper #audioZone #audioZoneList li{border-radius:15px;float:left;width:31%;margin:15px 1%;padding:5px;background:rgba(0, 0, 0, 0.1);}.content .wrapper #audioZone #audioZoneList li input[type="button"]{width:20px;height:20px;border-radius:10px;margin-left:10px;font-weight:bold;}
+.content .wrapper #audioSelection #soundDescriptionPreview{float:left;height:100%;overflow-y:auto;width:300px;margin-right:10px;}
+.content .wrapper #audioZone{margin:0 auto;background:rgba(0, 0, 0, 0.1);width:90%;height:76%;border-radius:15px;overflow-y:auto;}.content .wrapper #audioZone #audioZoneList{width:100%;list-style:none;padding-left:1%;}.content .wrapper #audioZone #audioZoneList li{min-width:310px;border-radius:15px;float:left;width:31%;margin:15px 1%;padding:5px;background:rgba(0, 0, 0, 0.1);}.content .wrapper #audioZone #audioZoneList li input[type="button"]{width:20px;height:20px;border-radius:10px;margin-left:10px;font-weight:bold;}
 .content .wrapper #audioZone #audioZoneList li .playSound{float:right;border-color:#73e673;background-color:#87ff87;}
 .content .wrapper #audioZone #audioZoneList li .playSound:hover{border-color:#5fd25f;background-color:#73eb73;}
 .content .wrapper #audioZone #audioZoneList li .pauseSound{margin-top:4px;line-height:8px;float:right;border-color:#e67373;background-color:#ff8787;}
@@ -49,8 +54,8 @@ header .tri_bottom{float:left;width:0px;height:0px;border-style:solid;border-wid
 .content .wrapper #audioZone #audioZoneList li h3{float:left;}
 .content .wrapper #audioZone #audioZoneList li .removeSoundFromList{margin-right:3px;width:15px;height:15px;background-color:#dcdcdc;border-width:2px;border-color:#ffffff;border-style:solid;border-radius:10px;float:right;font-size:15px;line-height:12px;padding-left:1px;}
 .content .wrapper #audioZone #audioZoneList li .removeSoundFromList:hover{background-color:#c8c8c8;border-color:#dcdcdc;cursor:default;}
-.content .wrapper #audioZone #audioZoneList li .uniqueSoundDescription{height:3em;overflow-y:scroll;width:90%;float:left;clear:both;}
-.content .wrapper #selectedFeeds{float:left;background:rgba(0, 0, 0, 0.1);width:70%;height:100%;border-radius:20px;overflow-y:scroll;}.content .wrapper #selectedFeeds #selectedFeedsList{width:100%;list-style:none;}.content .wrapper #selectedFeeds #selectedFeedsList li{float:left;width:100%;margin:5px 0 5px 0;background:rgba(0, 0, 0, 0.1);border-radius:15px;}.content .wrapper #selectedFeeds #selectedFeedsList li .graphDataContainer{width:100%;float:left;}.content .wrapper #selectedFeeds #selectedFeedsList li .graphDataContainer .graphInfo{padding-left:5px;width:30%;float:left;}.content .wrapper #selectedFeeds #selectedFeedsList li .graphDataContainer .graphInfo h2{margin-top:5px;}
+.content .wrapper #audioZone #audioZoneList li .uniqueSoundDescription{height:3em;overflow-y:auto;width:90%;float:left;clear:both;}
+.content .wrapper #selectedFeeds{float:left;background:rgba(0, 0, 0, 0.1);width:70%;height:100%;border-radius:20px;overflow-y:auto;}.content .wrapper #selectedFeeds #selectedFeedsList{width:100%;list-style:none;}.content .wrapper #selectedFeeds #selectedFeedsList li{float:left;width:100%;margin:5px 0 5px 0;background:rgba(0, 0, 0, 0.1);border-radius:15px;}.content .wrapper #selectedFeeds #selectedFeedsList li .graphDataContainer{width:100%;float:left;}.content .wrapper #selectedFeeds #selectedFeedsList li .graphDataContainer .graphInfo{padding-left:5px;width:30%;float:left;}.content .wrapper #selectedFeeds #selectedFeedsList li .graphDataContainer .graphInfo h2{margin-top:5px;}
 .content .wrapper #selectedFeeds #selectedFeedsList li .graphDataContainer .graphInfo h3{margin-bottom:5px;}
 .content .wrapper #selectedFeeds #selectedFeedsList li .graphDataContainer .graphInfo .feedVitalStats{margin-left:15%;}
 .content .wrapper #selectedFeeds #selectedFeedsList li .graphDataContainer .graphInfo input[type="button"]{border-radius:15px;width:70px;height:32px;margin-top:5px;float:right;margin-right:10px;}
@@ -59,18 +64,18 @@ header .tri_bottom{float:left;width:0px;height:0px;border-style:solid;border-wid
 .content .wrapper #selectedFeeds #selectedFeedsList li .graphDataContainer .options .graphSettings .thresholdValue{float:right;}
 .content .wrapper #selectedFeeds #selectedFeedsList li .graphDataContainer .options .graphSettings .soundOptions{float:right;}
 .content .wrapper #selectedFeeds #selectedFeedsList li .graphDataContainer .options .graphSettings .noiseCheckboxThing{float:right;}
-.content .wrapper #listOfFeeds{border-radius:20px;padding:1%;float:left;margin-left:5%;background:rgba(0, 0, 0, 0.1);width:25%;height:100%;}.content .wrapper #listOfFeeds h3{margin-left:15%;}
+.content .wrapper #listOfFeeds{border-radius:20px;padding:1%;float:left;margin-right:5%;background:rgba(0, 0, 0, 0.1);width:25%;height:100%;}.content .wrapper #listOfFeeds h3{margin-left:15%;}
 .content .wrapper #listOfFeeds h5{margin-left:15%;}
-.content .wrapper #listOfFeeds #quickInfoSummation{border-radius:10px;margin-top:10px;background:rgba(0, 0, 0, 0.1);width:100%;height:89%;overflow-y:scroll;}.content .wrapper #listOfFeeds #quickInfoSummation ul{list-style:none;}.content .wrapper #listOfFeeds #quickInfoSummation ul li .quickWrapper{border-radius:10px;padding:2%;background-color:rgba(255, 255, 255, 0.2);float:left;width:100%;margin-top:5px;margin-bottom:5px;}.content .wrapper #listOfFeeds #quickInfoSummation ul li .quickWrapper input[type="button"]{width:70px;float:right;border-radius:15px;}
+.content .wrapper #listOfFeeds #quickInfoSummation{border-radius:10px;margin-top:10px;background:rgba(0, 0, 0, 0.1);width:100%;height:89%;overflow-y:auto;}.content .wrapper #listOfFeeds #quickInfoSummation ul{list-style:none;}.content .wrapper #listOfFeeds #quickInfoSummation ul li .quickWrapper{border-radius:10px;padding:2%;background-color:rgba(255, 255, 255, 0.2);float:left;width:100%;margin-top:5px;margin-bottom:5px;}.content .wrapper #listOfFeeds #quickInfoSummation ul li .quickWrapper input[type="button"]{width:70px;float:right;border-radius:15px;}
 .content .wrapper #mapWrapper{border-radius:20px;float:left;background:rgba(0, 0, 0, 0.1);width:70%;height:100%;padding:10px 1% ;}.content .wrapper #mapWrapper #questionSetter{float:left;}
-.content .wrapper #mapWrapper #maxRenderSetter{float:right;}
+.content .wrapper #mapWrapper #renderSetter{float:right;}
 .content .wrapper #mapWrapper #map{border-radius:20px;clear:both;height:95%;}
 .content .wrapper #feedList{height:100%;padding:1%;float:left;margin-left:5%;border-radius:20px;background:rgba(0, 0, 0, 0.1);width:25%;height:99%;}.content .wrapper #feedList h2{text-align:center;}
 .content .wrapper #feedList #dataWrapper{height:100%;}.content .wrapper #feedList #dataWrapper h3{margin-left:15%;height:1em;overflow:hidden;}
 .content .wrapper #feedList #dataWrapper h5{margin-left:15%;}
 .content .wrapper #feedList #dataWrapper #creator{margin-left:15%;}.content .wrapper #feedList #dataWrapper #creator a{color:#ffffff;}
-.content .wrapper #feedList #dataWrapper #feedDescription{overflow-y:scroll;font-style:italic;height:20%;}
-.content .wrapper #feedList #dataWrapper #dataStreamDataList{margin-top:10px;height:67%;overflow-y:scroll;}.content .wrapper #feedList #dataWrapper #dataStreamDataList ul{list-style:none;}.content .wrapper #feedList #dataWrapper #dataStreamDataList ul li .chosen{background-color:rgba(100, 255, 100, 0.2);}
+.content .wrapper #feedList #dataWrapper #feedDescription{overflow-y:auto;font-style:italic;height:20%;}
+.content .wrapper #feedList #dataWrapper #dataStreamDataList{margin-top:10px;height:67%;overflow-y:auto;}.content .wrapper #feedList #dataWrapper #dataStreamDataList ul{list-style:none;}.content .wrapper #feedList #dataWrapper #dataStreamDataList ul li .chosen{background-color:rgba(100, 255, 100, 0.2);}
 .content .wrapper #feedList #dataWrapper #dataStreamDataList ul li .listed{background-color:rgba(255, 255, 255, 0.5) !important;}
 .content .wrapper #feedList #dataWrapper #dataStreamDataList ul li .dataWrapping{background-color:rgba(255, 255, 255, 0.2);border-radius:10px;float:left;width:100%;padding:2%;margin-top:5px;margin-bottom:5px;}.content .wrapper #feedList #dataWrapper #dataStreamDataList ul li .dataWrapping .listItem{width:60%;float:left;}.content .wrapper #feedList #dataWrapper #dataStreamDataList ul li .dataWrapping .listItem #id{font-weight:bold;}
 .content .wrapper #feedList #dataWrapper #dataStreamDataList ul li .dataWrapping .ButtonSection{float:right;}.content .wrapper #feedList #dataWrapper #dataStreamDataList ul li .dataWrapping .ButtonSection input[type="button"]{border-radius:15px;float:right;width:70px;height:32px;}
